--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,186 @@
-appdirs==1.4.3
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.1.2
-Flask-Cors==3.0.8
-Cython>= 0.28.5
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-MarkupSafe==1.1.1
-numpy
-pandas
-python-dateutil==2.8.1
-pytz==2019.3
-urllib3
-boto3
-scikit-learn
-scipy
-six==1.14.0
-virtualenv==20.0.7
-Werkzeug==1.0.1
+absl-py==1.0.0
+alembic==1.7.5
+anaconda-client==1.7.2
+anaconda-navigator==2.1.1
+appdirs==1.4.4
+argh==0.26.2
+astunparse==1.6.3
+atomicwrites==1.4.0
+bkcharts==0.2
+blis==0.7.5
+Boruta==0.3
+boto==2.49.0
+Bottleneck==1.3.2
+brotlipy==0.7.0
+cachetools==4.2.4
+catalogue==1.0.0
+certifi==2021.10.8
+chart-studio==1.1.0
+clyent==1.2.2
+colorlog==6.6.0
+colorlover==0.3.0
+comtypes==1.1.9
+conda==4.11.0
+conda-build==3.21.4
+conda-verify==3.4.2
+cufflinks==0.17.3
+cycler==0.10.0
+cymem==2.0.6
+Cython==0.29.14
+cytoolz==0.11.0
+databricks-cli==0.16.2
+decorator==5.0.9
+docker==5.0.3
+easydev==0.12.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+fitter==1.4.0
+Flask-Cors==3.0.10
+flatbuffers==2.0
+funcy==1.17
+future==0.18.2
+gast==0.4.0
+gensim==3.8.3
+gitdb==4.0.9
+GitPython==3.1.26
+gmpy2==2.0.8
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.43.0
+gunicorn==20.1.0
+h11==0.13.0
+h5py==2.10.0
+HeapDict==1.0.1
+htmlmin==0.1.12
+hyperopt==0.2.7
+ImageHash==4.2.1
+imbalanced-learn==0.7.0
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
+jdcal==1.4.1
+json5==0.9.5
+jsonpickle==2.1.0
+jupyter==1.0.0
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kmodes==0.11.1
+libclang==12.0.0
+lightgbm==3.3.2
+llvmlite==0.36.0
+locket==0.2.1
+Mako==1.1.6
+Markdown==3.3.6
+mccabe==0.6.1
+menuinst==1.4.16
+missingno==0.5.0
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-service==2.3.0
+mlflow==1.23.0
+mlxtend==0.19.0
+mpmath==1.2.1
+multimethod==1.6
+multipledispatch==0.6.0
+murmurhash==1.0.6
+mypy-extensions==0.4.3
+navigator-updater==0.2.1
+networkx==2.4
+oauthlib==3.1.1
+olefile==0.46
+openpyxl==3.0.9
+opt-einsum==3.3.0
+outcome==1.1.0
+packaging==21.3
+pandas-datareader==0.10.0
+pandas-profiling==3.1.0
+parso==0.7.0
+pathspec==0.7.0
+patsy==0.5.2
+pep8==1.7.1
+phik==0.12.0
+pkginfo==1.7.0
+plac==1.1.3
+ply==3.11
+pmdarima==1.8.5
+preshed==3.0.6
+prometheus-flask-exporter==0.18.7
+protobuf==3.19.1
+psycopg2==2.9.3
+py4j==0.10.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycaret==2.3.6
+pycosat==0.6.3
+pycurl==7.43.0.6
+pydantic==1.9.0
+pyee==7.0.4
+pyLDAvis==3.2.2
+pynndescent==0.5.6
+pyod==0.9.7
+pyppeteer==0.2.2
+pyreadline==2.1
+pytest==6.2.3
+pyvis==0.1.9
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.4.1
+pyzmq==20.0.0
+QDarkStyle==2.8.1
+QtPy==1.9.0
+querystring-parser==1.2.4
+requests-oauthlib==1.3.0
+rsa==4.8
+scikit-image==0.18.1
+scikit-learn==0.23.2
+scikit-plot==0.3.7
+scipy==1.5.4
+selenium==4.1.0
+simplegeneric==0.8.1
+sip==4.19.13
+sklearn==0.0
+smart-open==5.2.1
+smmap==5.0.0
+spacy==2.3.7
+sqlparse==0.4.2
+srsly==1.0.5
+statsmodels==0.13.2
+tables==3.6.1
+tabulate==0.8.9
+tangled-up-in-unicode==0.1.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.23.1
+termcolor==1.1.0
+terminado==0.9.4
+textblob==0.17.1
+thinc==7.4.5
+torch==1.10.2
+torchaudio==0.10.2
+torchvision==0.11.3
+trio==0.19.0
+trio-websocket==0.9.2
+umap-learn==0.5.2
+unicodecsv==0.14.1
+visions==0.7.4
+waitress==2.0.0
+wasabi==0.9.0
+webencodings==0.5.1
+websocket-client==1.2.3
+websockets==8.1
+widgetsnbextension==3.5.1
+win-unicode-console==0.5
 wincertstore==0.2
-requests
+wordcloud==1.8.1
+wrapt==1.12.1
+wsproto==1.0.0
+xgboost==1.5.2
+xlwings==0.23.0
+xlwt==1.3.0
+xmltodict==0.12.0
+zict==2.0.0
