--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Boruta==0.3
 catalogue==1.0.0
 certifi==2021.10.8
 cymem==2.0.6
+Flask==1.1.2
+Flask-Cors==3.0.8
 Cython==0.29.14
 databricks-cli==0.16.2
 docker==5.0.3
@@ -54,4 +56,31 @@ waitress==2.0.0
 wasabi==0.9.0
 websocket-client==1.2.3
 wincertstore==0.2
+Werkzeug 1.0.1
 yellowbrick==1.3.post1
+appdirs==1.4.3
+certifi==2020.6.20
+click==7.1.2
+distlib==0.3.0
+Flask==1.1.2
+Flask-Cors==3.0.8
+Cython>= 0.28.5
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+MarkupSafe==1.1.1
+numpy
+pandas
+python-dateutil==2.8.1
+pytz==2019.3
+urllib3
+boto3
+scikit-learn
+scipy
+six==1.14.0
+virtualenv==20.0.7
+Werkzeug==1.0.1
+wincertstore==0.2
+requests
+
