--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,40 @@ blis==0.7.5
 Boruta==0.3
 catalogue==1.0.0
 certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.4
 cymem==2.0.6
-Flask==1.1.2
-Flask-Cors==3.0.8
-Cython==0.29.14
+Cython>= 0.28.5
+gunicorn==20.0.4
 databricks-cli==0.16.2
 docker==5.0.3
+Flask==2.0.3
+Flask-Cors==3.0.10
 funcy==1.17
 gensim==3.8.3
 gitdb==4.0.9
 GitPython==3.1.26
 htmlmin==0.1.12
+idna==3.3
 ImageHash==4.2.1
 imbalanced-learn==0.7.0
 importlib-resources==5.4.0
+itsdangerous==2.1.1
+Jinja2==3.0.3
+joblib
 kmodes==0.11.1
 lightgbm==3.3.2
 Mako==1.1.6
+MarkupSafe>=1.1.1
 missingno==0.5.0
 mlflow==1.23.0
 mlxtend==0.19.0
 multimethod==1.6
 murmurhash==1.0.6
 networkx==2.4
+numpy
+pandas
 pandas-profiling==3.1.0
 phik==0.12.0
 plac==1.1.3
@@ -36,10 +47,14 @@ pydantic==1.9.0
 pyLDAvis==3.2.2
 pynndescent==0.5.6
 pyod==0.9.7
+python-dateutil==2.8.2
+pytz==2022.1
 querystring-parser==1.2.4
-scikit-learn==0.23.2
+requests
+scikit-learn
 scikit-plot==0.3.7
-scipy==1.5.4
+scipy
+six==1.16.0
 sklearn==0.0
 smart-open==5.2.1
 smmap==5.0.0
@@ -50,35 +65,14 @@ tabulate==0.8.9
 tangled-up-in-unicode==0.1.0
 textblob==0.17.1
 thinc==7.4.5
+threadpoolctl==3.1.0
 umap-learn==0.5.2
+urllib3
 visions==0.7.4
 waitress==2.0.0
 wasabi==0.9.0
 websocket-client==1.2.3
+Werkzeug==2.0.3
 wincertstore==0.2
+xgboost==1.5.2
 yellowbrick==1.3.post1
-appdirs==1.4.3
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.1.2
-Flask-Cors==3.0.8
-Cython>= 0.28.5
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-MarkupSafe==1.1.1
-numpy
-pandas
-python-dateutil==2.8.1
-pytz==2019.3
-urllib3
-boto3
-scikit-learn
-scipy
-six==1.14.0
-virtualenv==20.0.7
-wincertstore==0.2
-requests
-
